apply table style to _all_ zurich admin tables

--- a/templates/web/zurich/admin/index-sdm.html
+++ b/templates/web/zurich/admin/index-sdm.html
@@ -13,7 +13,7 @@
 [% INCLUDE 'admin/footer.html' %]
 
 [% BLOCK list %]
-<table cellspacing="0" cellpadding="2" border="1" class="admin">
+<table cellspacing="0" cellpadding="2" border="1">
     <tr>
         <th>[% loc('ID') %]</th>
         <th>[% loc('Title') %]</th>
