--- a/web/cobrands/zurich/_zurich.scss
+++ b/web/cobrands/zurich/_zurich.scss
@@ -31,7 +31,7 @@ a:hover {
     color: #3c3c3c;
 }
 
-table.admin {
+.admin table {
   width: 100%;
   font-size: 0.9em;
   border: 1px solid $table_border_color;
