--- a/web/cobrands/zurich/layout.scss
+++ b/web/cobrands/zurich/layout.scss
@@ -114,6 +114,12 @@ body.mappage {
   background-color: inherit;
   color: inherit;
   margin: 0 0 2em 0;
+  #postcodeForm div {
+    border-color: $dark_blue;
+    input#pc {
+      width: 86%; // on widescreen, override the fixed width
+    }
+  }
 }
 
 /* TODO Change the main-nav to be what is wanted */
