--- a/web/cobrands/zurich/base.scss
+++ b/web/cobrands/zurich/base.scss
@@ -74,7 +74,7 @@
   background: inherit;
   border-color:transparent;
   input#pc {
-    width: 15em;
+    max-width: 15em;
     background-color: #fff;
   }
   input#sub {
